Client_Info Completed

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,12 +36,14 @@ excludes=
 file.reference.jcalendar-0.8.1.jar=C:\\Users\\Prajakta\\Downloads\\jcalendar-0.8.1.jar
 file.reference.jcalendar-1.4.jar=C:\\Users\\Prajakta\\Downloads\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.mysql-connector-j-8.3.0.jar=C:\\Users\\Prajakta\\Downloads\\mysql-connector-j-8.3.0.jar
+file.reference.rs2xml.jar=C:\\Users\\bhush\\Downloads\\rs2xml.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-j-8.3.0.jar}:\
     ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.jcalendar-0.8.1.jar}
+    ${file.reference.jcalendar-0.8.1.jar}:\
+    ${file.reference.rs2xml.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
